@startuml
class PortShipUI{
}

class CriticalPortController{
+returnCritical()
}

class Company{
-GraphStore gs
--
+getGraphStore()
}

class GraphStore{
-MatrixGraph<PortsGraph, Integer> graph
--
+MatrixGraph<PortsGraph, Integer> getGraphStore()
}

class CriticalPort{
--
+ Map<PortsGraph, Set<PortsGraph>> returnCritical(MatrixGraph<PortsGraph, Integer>)

}


Main ..>CriarFicheiro
CriticalPortController ..> Company
Company --> GraphStore
CriticalPortController ..> GraphStore
GraphStore -> CriticalPort

@enduml